# osfv-scripts

./: .codespellrc  .codespellx  .gitignore  .pre-commit-config.yaml  .robotidy  README.md
osfv_cli/: Makefile  README.md  cli.yml  pyproject.toml  snipeit.yml  zabbix.yml
osfv_cli/models/: VP2410.yml  VP4630.yml  VP4670.yml
osfv_cli/monitoring/zabbix/: External_Check.md  flash_probe.sh
osfv_cli/monitoring/zabbix/external_flash_probe/: flash_probe.md  flash_probe.sh  flash_read.sh  flash_write.sh
osfv_cli/osfv_cli/: osfv_cli.py  rte.py  rte_robot.py  rtectrl_api.py  snipeit_api.py  snipeit_robot.py  sonoff_api.py
osfv_cli/osfv_cli/models/: APU2.yml  APU7.yml  EA-0113.yml  FW4C.yml  MSI PRO Z690-A DDR4.yml  MSI PRO Z790-P WIFI DDR5.yml  MinnowBoard Turbot B41.yml  Optiplex 7010.yml  PT401.yml  V1210.yml  VP2410.yml  VP2420.yml  VP4630.yml  VP4670.yml  minnowmax.yml
osfv_cli/src/osfv/: __init__.py  __main__.py
osfv_cli/src/osfv/cli/: cli.py  mecheck.py
osfv_cli/src/osfv/libs/: flash_image.py  localflash.py  models.py  rte.py  rtectrl_api.py  snipeit_api.py  sonoff_api.py  utils.py  zabbix.py
osfv_cli/src/osfv/models/: APU3-pk-homelab.yml  APU4.yml  APU6.yml  EA-0113.yml  FW4C.yml  H4-PLUS.yml  MSI PRO Z690-A DDR4.yml  MSI PRO Z690-A DDR5.yml  MSI PRO Z790-P DDR5.yml  MZ33-AR1 Rev. 3.yml  MinnowBoard Turbot B41.yml  NS50MU.yml  V1210.yml  (+18 more)
osfv_cli/test/: exclusive_ip.robot  flash_image_check.robot  models.robot  rte.robot  snipeit.robot  snipeit_stress.robot
osfv_cli/test/common/: keywords.robot
osfv_cli/test/data/: FakeDevice.yml  FakeDeviceBroken.yml
(+29 files in other folders)
