[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
osfv_cli = "osfv_cli.osfv_cli:main"

[tool.poetry]
name = "osfv_cli"
version = "0.2.0"
description = "Open Source Firmware Validation Command Line Interface Tool"
authors = ["Maciej Pijanowski <Maciej.Pijanowski@3mdeb.com>"]

[tool.poetry.dependencies]
python = "^3.7"
paramiko = "^3.2.0"
pexpect = "^4.8.0"
PyYAML = "^6.0"
requests = "^2.31.0"
unidecode = "^1.3.6"
