[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
osfv_cli = "osfv.cli.cli:main"

[tool.poetry.group.test.dependencies]
robotframework = "^7.2"

[tool.poetry]
name = "osfv"
version = "0.5.12"
description = "Open Source Firmware Validation Command Line Interface Tool"
authors = ["Maciej Pijanowski <Maciej.Pijanowski@3mdeb.com>"]
include = ["src/models/*.yml"]

[tool.poetry.dependencies]
python = "^3.8"
paramiko = "^3.2.0"
pexpect = "^4.8.0"
PyYAML = "^6.0"
requests = "^2.31.0"
unidecode = "^1.3.6"
importlib-resources = "^6.1.1"
voluptuous = "^0.14.2"
